--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "main": "webpack.config.js",
   "scripts": {
     "build": "bash ./deploy.sh",
-    "start": "webpack --mode development"
+    "start": "webpack"
   },
   "author": "suporte@consystec.com.br",
   "license": "ISC",
   "devDependencies": {
-    "copy-webpack-plugin": "^5.1.1",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11"
+    "copy-webpack-plugin": "^9.0.1",
+    "webpack": "^5.50.0",
+    "webpack-cli": "^4.7.2"
   },
   "dependencies": {
     "xml2js": "^0.4.19"
