--- a/package.json
+++ b/package.json
@@ -1,20 +1,46 @@
 {
   "name": "consys",
   "version": "1.0.0",
-  "description": "csy framework utils for react",
+  "description": "framework utils for react",
   "main": "webpack.config.js",
   "scripts": {
     "build": "bash ./deploy.sh",
+    "dev": "webpack serve --config webpack.dev.js --progress",
     "start": "webpack"
   },
   "author": "joseantonio_alexandre@hotmail.com",
   "license": "ISC",
   "devDependencies": {
-    "copy-webpack-plugin": "^9.0.1",
-    "webpack": "^5.50.0",
-    "webpack-cli": "^4.7.2"
+    "@babel/cli": "^7.16.8",
+    "@babel/core": "^7.16.7",
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@babel/plugin-proposal-object-rest-spread": "^7.16.7",
+    "@babel/preset-env": "^7.16.8",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/runtime": "^7.16.7",
+    "babel-loader": "^8.2.3",
+    "babel-plugin-import": "^1.13.3",
+    "css-loader": "^6.5.1",
+    "file-loader": "^6.2.0",
+    "html-loader": "^3.1.0",
+    "html-webpack-plugin": "^5.5.0",
+    "less": "^4.1.2",
+    "less-loader": "^10.2.0",
+    "raw-loader": "^4.0.2",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.66.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.7.3",
+    "copy-webpack-plugin": "^9.0.1"
   },
   "dependencies": {
+    "antd": "^4.18.3",
+    "moment": "^2.29.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-intl": "^5.24.2",
+    "react-router-dom": "^5.3.0",
+    "string-mask": "^0.3.0",
     "xml2js": "^0.4.19"
   }
 }
