--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@babel/runtime": "^7.16.7",
     "babel-loader": "^8.2.3",
     "babel-plugin-import": "^1.13.3",
-    "css-loader": "^6.5.1",
+    "copy-webpack-plugin": "^9.0.1",
+    "css-loader": "^6.7.1",
     "file-loader": "^6.2.0",
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
@@ -28,19 +29,18 @@
     "less-loader": "^10.2.0",
     "raw-loader": "^4.0.2",
     "style-loader": "^3.3.1",
-    "webpack": "^5.66.0",
+    "webpack": "^5.73.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.7.3",
-    "copy-webpack-plugin": "^9.0.1"
+    "webpack-dev-server": "^4.9.2"
   },
   "dependencies": {
-    "antd": "^4.18.3",
+    "antd": "^4.21.0",
     "date-fns": "^2.28.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-intl": "^5.24.2",
-    "react-router-dom": "^5.3.0",
+    "react-intl": "^5.25.1",
+    "react-router-dom": "^5.3.3",
     "string-mask": "^0.3.0",
     "xml2js": "^0.4.19"
   }
