--- a/package.json
+++ b/package.json
@@ -11,37 +11,38 @@
   "author": "joseantonio_alexandre@hotmail.com",
   "license": "ISC",
   "devDependencies": {
-    "@babel/cli": "^7.16.8",
-    "@babel/core": "^7.16.7",
+    "@babel/cli": "^7.21.5",
+    "@babel/core": "^7.22.1",
     "@babel/plugin-proposal-class-properties": "^7.16.7",
-    "@babel/plugin-proposal-object-rest-spread": "^7.16.7",
-    "@babel/preset-env": "^7.16.8",
-    "@babel/preset-react": "^7.16.7",
-    "@babel/runtime": "^7.16.7",
-    "babel-loader": "^8.2.3",
-    "babel-plugin-import": "^1.13.3",
-    "copy-webpack-plugin": "^9.0.1",
-    "css-loader": "^6.7.1",
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+    "@babel/preset-env": "^7.22.4",
+    "@babel/preset-react": "^7.22.3",
+    "@babel/runtime": "^7.22.3",
+    "babel-loader": "^9.1.2",
+    "babel-plugin-import": "^1.13.6",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.8.1",
     "file-loader": "^6.2.0",
-    "html-loader": "^3.1.0",
-    "html-webpack-plugin": "^5.5.0",
+    "html-loader": "^4.2.0",
+    "html-webpack-plugin": "^5.5.1",
     "less": "^4.1.2",
-    "less-loader": "^10.2.0",
+    "less-loader": "^11.1.1",
     "raw-loader": "^4.0.2",
-    "style-loader": "^3.3.1",
-    "webpack": "^5.73.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.9.2"
+    "style-loader": "^3.3.3",
+    "webpack": "^5.84.1",
+    "webpack-cli": "^5.1.1",
+    "webpack-dev-server": "^4.15.0"
   },
   "dependencies": {
-    "antd": "^4.21.0",
-    "date-fns": "^2.28.0",
+    "antd": "^5.5.1",
+    "date-fns": "^2.30.0",
     "moment": "^2.29.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-intl": "^5.25.1",
-    "react-router-dom": "^5.3.3",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-intl": "^6.4.2",
+    "react-router-dom": "^6.11.2",
     "string-mask": "^0.3.0",
-    "xml2js": "^0.4.19"
+    "xml2js": "^0.6.0"
   }
 }
