--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "webpack serve --config webpack.dev.js --progress",
     "start": "webpack"
   },
-  "author": "joseantonio_alexandre@hotmail.com",
+  "author": "jose@consystec.com.br",
   "license": "ISC",
   "devDependencies": {
     "@babel/cli": "^7.16.8",
