--- a/package.json
+++ b/package.json
@@ -11,37 +11,36 @@
   "author": "jose@consystec.com.br",
   "license": "ISC",
   "devDependencies": {
-    "@babel/cli": "^7.16.8",
-    "@babel/core": "^7.16.7",
-    "@babel/plugin-proposal-class-properties": "^7.16.7",
-    "@babel/plugin-proposal-object-rest-spread": "^7.16.7",
-    "@babel/preset-env": "^7.16.8",
-    "@babel/preset-react": "^7.16.7",
-    "@babel/runtime": "^7.16.7",
-    "babel-loader": "^8.2.3",
-    "babel-plugin-import": "^1.13.3",
-    "copy-webpack-plugin": "^9.0.1",
-    "css-loader": "^6.7.1",
+    "@babel/cli": "^7.27.0",
+    "@babel/core": "^7.26.10",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/runtime": "^7.27.0",
+    "babel-loader": "^8.4.1",
+    "babel-plugin-import": "^1.13.8",
+    "copy-webpack-plugin": "^9.1.0",
+    "css-loader": "^6.11.0",
     "file-loader": "^6.2.0",
-    "html-loader": "^3.1.0",
-    "html-webpack-plugin": "^5.5.0",
-    "less": "^4.1.2",
+    "html-loader": "^3.1.2",
+    "html-webpack-plugin": "^5.6.3",
+    "less": "^4.3.0",
     "less-loader": "^10.2.0",
     "raw-loader": "^4.0.2",
-    "style-loader": "^3.3.1",
-    "webpack": "^5.73.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.9.2"
+    "style-loader": "^3.3.4",
+    "webpack": "^5.99.6",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.15.2"
   },
   "dependencies": {
-    "antd": "^4.21.0",
-    "date-fns": "^2.28.0",
-    "moment": "^2.29.1",
+    "antd": "^4.24.16",
+    "date-fns": "^2.30.0",
+    "moment": "^2.30.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-intl": "^5.25.1",
-    "react-router-dom": "^5.3.3",
-    "string-mask": "^0.3.0",
-    "xml2js": "^0.4.19"
+    "react-router-dom": "^5.3.4",
+    "string-mask": "^0.3.0"
   }
 }
